--- a/flutter_application/pubspec.yaml
+++ b/flutter_application/pubspec.yaml
@@ -1,5 +1,5 @@
 name: flutter_application
-description: CS 360 project
+description: Mr Fluffy Fluffs android application for our project for the course CS-360
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -41,8 +41,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -56,10 +57,13 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  #fonts:
+    #- family: NunitoSansLight
+      #fonts:
+        #- asset: fonts/NunitoSans-ExtraLight.ttf
+    #- family: NunitoSansSemiBold
+      #fonts:
+        #- asset: fonts/NunitoSans-SemiBold.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
