--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/LUMS-SE-Group-07/Mr-Fluffy-Fluffs#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "mongodb": "^3.5.6",
     "mongoose": "^5.9.10",
     "nodemon": "^2.0.3"
