--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
   },
   "homepage": "https://github.com/LUMS-SE-Group-07/Mr-Fluffy-Fluffs#readme",
   "dependencies": {
+    "bcrypt": "^4.0.1",
+    "connect-mongo": "^3.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "mongodb": "^3.5.6",
     "mongoose": "^5.9.10",
-    "nodemon": "^2.0.3"
+    "nodemon": "^2.0.3",
+    "uuidv4": "^6.0.7"
   }
 }
