--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongodb": "^3.5.6",
     "mongoose": "^5.9.10",
     "nodemon": "^2.0.3",
+    "twilio": "^3.42.2",
     "uuidv4": "^6.0.7"
   }
 }
