--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
   "dependencies": {
     "bcrypt": "^4.0.1",
     "connect-mongo": "^3.2.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "mongodb": "^3.5.6",
     "mongoose": "^5.9.10",
+    "mongoose-ttl": "0.0.3",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.3",
     "twilio": "^3.42.2",
     "uuidv4": "^6.0.7"
